# LLM-trainer

./: .gitignore  README.md  config.yaml  pyproject.toml
llm_trainer/: __init__.py  inference.py  train_xpo.py
outputs/xpo-training/: training_config.yaml
