[project]
name = "llm-trainer"
version = "0.1.0"
description = "Modular LLM fine-tuning toolkit using SFT with PEFT and TRL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.45.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.42.0",
    "scipy>=1.11.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "wandb>=0.16.0",
    "huggingface-hub[cli]>=0.36.0",
    "torchvision",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
flash-attn = [
    "flash-attn>=2.5.0",
]

[project.scripts]
xpo = "llm_trainer.train_xpo:main"
infer = "llm_trainer.inference:main"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
